Revision history for Music-BachChoralHarmony

{{$NEXT}}
    - Improve the eq/ roman numeral analysis programs a bit more.
    - Fix the distribution file exclusions.
    - Make the parse data a proper attribute.

0.0105 2018-11-05 15:58:25
    - Improve the eq/ roman numeral analysis programs.

0.0104 2018-11-04 13:21:48
    - Add and improve eq/ programs.

0.0103 2018-10-13 15:51:20
    - Add and improve eq/ programs.

0.0102 2018-10-08 16:32:30
    - Improve documentation.
    - Add event tests.

0.0101 2018-10-08 15:12:14
    - Fill-in missing keys.

0.0100 2018-10-08 14:09:41
    - Mint by Dist::Zilla.
    - Tweak significantly into place.