@@ -4,6 +4,7 @@ Revision history for Music-BachChoralHarmony
     - Improve the eq/ roman numeral analysis programs a bit more.
     - Fix the distribution file exclusions.
     - Make the parse data a proper attribute.
+    - Add a handy ->search method for song properties.
 
 0.0105 2018-11-05 15:58:25
     - Improve the eq/ roman numeral analysis programs.
